clang/test/BSC/Negative/Trait/r3/trait_pointer_compare_no_impl_type/trait_pointer_compare_no_impl_type.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

_Trait Future {
    int poll(This* this);
};

int int::poll(int* this) {
    return *this;
}

_Impl _Trait Future for int;

int main() {
    int d = 1;
    _Trait Future *f = &d;
    if (f == 1.0) {  // expected-error {{expected a pointer type which has implemented '_Trait Future', found 'double'}}
        return 1;
    }
   
    return 0;
}
